@@ -1,8 +1,12 @@
 --- 
 abstract: Administer IIS webserver on Windows
 author: Martin Thurn (mthurn@cpan.org)
+build_requires: 
+  IO::Capture::Stderr: 0
+  Test::More: 0
+  Test::Simple: 0.44
 distribution_type: module
-generated_by: Module::Install version 0.65
+generated_by: Module::Install version 0.67
 license: perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -17,8 +21,5 @@ recommends:
 requires: 
   Data::Dumper: 0
   File::Spec: 0
-  IO::Capture::Stderr: 0
   IO::String: 0
-  Test::More: 0
-  Test::Simple: 0.44
-version: 1.017
+version: 1.018
